--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@mui/x-date-pickers": "^8.19.0",
     "dayjs": "^1.11.19",
     "firebase": "^12.6.0",
+    "leaflet": "^1.9.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.1"
   },
